--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <li>Avoiding touching your face wih unwashed hands.</li>
             </ol>
         </ul>
+        <center> <p><a  href="https://www.divisor.in" target="iframe_a">DIVISOR.IN</a></p></center>
+        <center> <iframe  src="index2.html" name="iframe_a"></iframe></center>
        
-        <iframe align="center" src="index2.html" name="iframe_a"></iframe>
-       <p><a  href="https://www.divisor.in" target="iframe_a">DIVISOR.IN</a></p>
        <center><a id="raj" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019?gclid=CjwKCAjwmv-DBhAMEiwA7xYrd9MeNnEo-vnoZw8OyOPnMyFQ5iCniXgqzAl1O1dk5najRvJyOFYIIxoCaUcQAvD_BwE">
         Click here for more information</a></center>
         
