--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <marquee direction="up"><h1 style="color:rgba(232, 248, 86, 0.815);">This is a example of IFRAME Tag</h1></marquee>
+        <marquee direction="up"><h1 style="color:rgba(232, 248, 86, 0.815);">This is an example of IFRAME Tag</h1></marquee>
     </body>
 </html>
